Arrumado alguns bugs, Projeto pronto

--- a/src/main/resources/application_en.properties
+++ b/src/main/resources/application_en.properties
@@ -1,158 +1,183 @@
-pages.inicio.welcome								= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
-pages.inicio.title									= Home
-pages.inicio.menu									= Home
+pages.inicio.welcome									= Welcome to TMaker! The best service in web that you can make your tests with, confort, precision and quickness.
+pages.inicio.title										= Home
+pages.inicio.menu										= Home
 
 
-pages.comuns.form.btnSalvar                 		= Save
-pages.comuns.form.opcoes							= Options
+pages.comuns.form.btnSalvar                 			= Save
+pages.comuns.form.opcoes								= Options
 
 
-pages.comuns.menu.inicio							= Home
-pages.comuns.menu.cadastros							= Registers
-pages.comuns.menu.gerarProva						= Generate Test
-pages.comuns.menu.idioma							= Language
-pages.comuns.menu.sobre								= About us
+pages.comuns.menu.inicio								= Home
+pages.comuns.menu.cadastros								= Registers
+pages.comuns.menu.gerarProva							= Generate Test
+pages.comuns.menu.idioma								= Language
+pages.comuns.menu.sobre									= About us
 
 
-pages.comuns.btn.professor							= Register Teachers
-pages.comuns.btn.disciplina							= Register Discipline
-pages.comuns.btn.item								= Register Items
-pages.comuns.btn.pergunta							= Register Questions
-pages.comuns.btn.conteudo							= Register Contents
-pages.comuns.btn.prova								= Register Tests
+pages.comuns.btn.professor								= Register Teachers
+pages.comuns.btn.disciplina								= Register Discipline
+pages.comuns.btn.item									= Register Items
+pages.comuns.btn.pergunta								= Register Questions
+pages.comuns.btn.conteudo								= Register Contents
+pages.comuns.btn.prova									= Register Tests
 
 
-pages.comuns.rodape.footerText 						= http://www.iznerol.com.br - Alfa 1.0
-pages.comuns.rodape.allRightsReserved 				= 2016 - All rights reserved
-
-pages.linguagem.title                      		 	= Language
-pages.linguagem.lingua								= Change Language:
-pages.linguagem.menu								= Language
-pages.linguagem.idiomaDisp							= Available languages
+pages.comuns.rodape.footerText 							= http://www.iznerol.com.br - Alfa 1.0
+pages.comuns.rodape.allRightsReserved 					= 2016 - All rights reserved
 
 
-pages.sobre.title									= About us
-pages.sobre.info									= We are a big fucking company of information tecnology
+pages.linguagem.title                      		 		= Language
+pages.linguagem.lingua									= Change Language:
+pages.linguagem.menu									= Language
+pages.linguagem.idiomaDisp								= Available languages
 
 
-pages.cadastroProfessor.title                  		= Register teacher
-pages.cadastroProfessor.menu						= Register teacher
-pages.cadastroProfessor.form.nome					= Name:
-pages.cadastroProfessor.form.cursoMinistra			= Ministered course:
-pages.cadastroProfessor.table.title  				= Registered teacher
-pages.cadastroProfessor.table.codigo				= Code
-pages.cadastroProfessor.table.nome					= Name
-pages.cadastroProfessor.table.cursoMinistra			= Ministered course
-pages.cadastroProfessor.professor.Disciplinas   	= Teacher's disciplines:
-pages.cadastroProfessor.disciplina.codigo			= Code
-pages.cadastroProfessor.disciplina.nome				= Name
-pages.cadastroProfessor.filterMSG					= No teacher selected by the filter criteria
-pages.cadastroProfessor.disciplina.filterMSG		= No discipline selected by the filter criteria
+pages.sobre.title										= About us
+pages.sobre.info										= This Web Site was proposed as a project of laboratory object-oriented language by the Teacher Glauco Todesco at FACENS and was developed by the Computer Engeneers Giovanni Garcia with RA: 140872 and Maurício Luís with RA: 141269
 
 
-pages.cadastroDisciplina.title						= Register Discipline
-pages.cadastroDisciplina.menu						= Register Discipline
-pages.cadastroDisciplina.form.nome					= Name:
-pages.cadastroDisciplina.form.professor				= Teacher:
-pages.cadastroDisciplina.form.sm.professor			= Select a teacher
-pages.cadastroDisciplina.table.title				= Registered disciplines
-pages.cadastroDisciplina.table.codigo				= Code
-pages.cadastroDisciplina.table.nome					= Name
-pages.cadastroDisciplina.filterMSG					= No discipline selected by the filter criteria
-pages.cadastroDisciplina.disciplina.conteudos		= Course contents:
-pages.cadastroDisciplina.conteudo.codigo			= Code
-pages.cadastroDisciplina.conteudo.nome				= Name
-pages.cadastroDisciplina.conteudo.filterMSG			= No content selected by the filter criteria
-pages.cadastroDisciplina.disciplina.provas			= Course tests:
-pages.cadastroDisciplina.prova.codigo				= Code
-pages.cadastroDisciplina.prova.nome					= Name
-pages.cadastroDisciplina.prova.faculdade			= College
-pages.cadastroDisciplina.prova.turma				= Class
-pages.cadastroDisciplina.prova.curso				= Course
-pages.cadastroDisciplina.prova.dataAplicacao		= Date of application
-pages.cadastroDisciplina.prova.tempo				= Estimated time
-pages.cadastroDisciplina.prova.filterMSG			= No test selected by the filter criteria
-pages.cadastroDisciplina.dataAplicacao				= Date of application
+pages.cadastroProfessor.title                  			= Register teacher
+pages.cadastroProfessor.menu							= Register teacher
+pages.cadastroProfessor.form.nome						= Name:
+pages.cadastroProfessor.form.cursoMinistra				= Ministered course:
+pages.cadastroProfessor.table.title  					= Registered teacher
+pages.cadastroProfessor.table.codigo					= Code
+pages.cadastroProfessor.table.nome						= Name
+pages.cadastroProfessor.table.cursoMinistra				= Ministered course
+pages.cadastroProfessor.professor.Disciplinas   		= Teacher's disciplines:
+pages.cadastroProfessor.disciplina.codigo				= Code
+pages.cadastroProfessor.disciplina.nome					= Name
+pages.cadastroProfessor.filterMSG						= No teacher selected by the filter criteria
+pages.cadastroProfessor.disciplina.filterMSG			= No discipline selected by the filter criteria
+
+
+pages.cadastroDisciplina.title							= Register Discipline
+pages.cadastroDisciplina.menu							= Register Discipline
+pages.cadastroDisciplina.form.nome						= Name:
+pages.cadastroDisciplina.form.professor					= Teacher:
+pages.cadastroDisciplina.form.sm.professor				= Select a teacher
+pages.cadastroDisciplina.table.title					= Registered disciplines
+pages.cadastroDisciplina.table.codigo					= Code
+pages.cadastroDisciplina.table.nome						= Name
+pages.cadastroDisciplina.filterMSG						= No discipline selected by the filter criteria
+pages.cadastroDisciplina.disciplina.conteudos			= Course contents:
+pages.cadastroDisciplina.conteudo.codigo				= Code
+pages.cadastroDisciplina.conteudo.nome					= Name
+pages.cadastroDisciplina.conteudo.filterMSG				= No content selected by the filter criteria
+pages.cadastroDisciplina.disciplina.provas				= Course tests:
+pages.cadastroDisciplina.prova.codigo					= Code
+pages.cadastroDisciplina.prova.nome						= Name
+pages.cadastroDisciplina.prova.faculdade				= College
+pages.cadastroDisciplina.prova.turma					= Class
+pages.cadastroDisciplina.prova.curso					= Course
+pages.cadastroDisciplina.prova.dataAplicacao			= Date of application
+pages.cadastroDisciplina.prova.tempo					= Estimated time
+pages.cadastroDisciplina.prova.filterMSG				= No test selected by the filter criteria
+pages.cadastroDisciplina.dataAplicacao					= Date of application
 
 
 
-pages.cadastroConteudo.title						= Register contents
-pages.cadastroConteudo.menu							= Register contents
-pages.cadastroConteudo.form.nomeCont				= Name:
-pages.cadastroConteudo.form.disciplina				= Discipline:
-pages.cadastroConteudo.form.sm.disciplina			= Select a Discipline
-pages.cadastroConteudo.form.perguntas				= Questions:
-pages.cadastroConteudo.table.title					= Registered contents
-pages.cadastroConteudo.table.codigo					= Code
-pages.cadastroConteudo.table.nome					= Name
-pages.cadastroConteudo.filterMSG					= No content selected by the filter criteria
-
-pages.cadastroPergunta.title						= Register questions
-pages.cadastroPergunta.menu							= Register questions
-pages.cadastroPergunta.titleAlternativa				= Register alternative
-pages.cadastroPergunta.titleDissertativa			= Register dissertative
-pages.cadastroPergunta.titleMultiplaEscolha			= Register multiple choice
-pages.cadastroPergunta.titleVerdadeiroFalso			= Register true or false
-pages.cadastroPergunta.form.pergunta.enunciado		= Enunciation:
-pages.cadastroPergunta.form.pergunta.dificuldade	= Difficult:
-pages.cadastroPergunta.form.pergunta.tempoEstimado	= Estimated time:
-pages.cadastroPergunta.form.pergunta.dataCriacao 	= Creation date:
-pages.cadastroPergunta.form.pergunta.itens			= Itens:
-pages.cadastroPergunta.form.pergunta.resposta		= Answer:
-pages.cadastroPergunta.table.title					= Registered questions 
-pages.cadastroPergunta.table.codigo					= Code		
-pages.cadastroPergunta.table.enunciado				= Enunciation
-pages.cadastroPergunta.table.dificuldade			= Difficult
-pages.cadastroPergunta.table.tempoEstimado			= Estimated time
-pages.cadastroPergunta.table.dataCriacao			= Creation date
-pages.cadastroPergunta.table.numeroPerguntas		= Number of registered questions
-pages.cadastroPergunta.filterMSG					= No questions selected by the filter criteria
+pages.cadastroConteudo.title							= Register contents
+pages.cadastroConteudo.menu								= Register contents
+pages.cadastroConteudo.form.nomeCont					= Name:
+pages.cadastroConteudo.form.disciplina					= Discipline:
+pages.cadastroConteudo.form.sm.disciplina				= Select a Discipline
+pages.cadastroConteudo.form.perguntas					= Questions:
+pages.cadastroConteudo.table.title						= Registered contents
+pages.cadastroConteudo.table.codigo						= Code
+pages.cadastroConteudo.table.nome						= Name
+pages.cadastroConteudo.filterMSG						= No content selected by the filter criteria
 
 
-pages.cadastroProva.title							= Register test
-pages.cadastroProva.menu							= Register test
-pages.cadastroProva.form.nome						= Name:
-pages.cadastroProva.form.faculdade					= College:
-pages.cadastroProva.form.turma						= Class:
-pages.cadastroProva.form.curso						= Course:
-pages.cadastroProva.form.dificuldade				= Difficult:
-pages.cadastroProva.form.dificuldadeDaPergunta		= Difficult of the questions:
-pages.cadastroProva.form.dataAplicacao				= Application date:
-pages.cadastroProva.form.numeroPergunta 			= Number of questions:
-pages.cadastroProva.form.tempo						= Estimated time:
-pages.cadastroProva.form.disciplina					= Discipline:
-pages.cadastroProva.form.sm.disciplina				= Select a discipline
-pages.cadastroProva.form.conteudos					= Contents:
-pages.cadastroProva.table.title						= Registered tests
-pages.cadastroProva.table.codigo					= Code
-pages.cadastroProva.table.nome						= Name
-pages.cadastroProva.table.faculdade					= College
-pages.cadastroProva.table.turma						= Class
-pages.cadastroProva.table.curso						= Course
-pages.cadastroProva.table.dificuldade				= Difficult
-pages.cadastroProva.table.dataAplicacao				= Application date
-pages.cadastroProva.table.tempo						= Estimated time
-pages.cadastroProva.filterMSG						= No test selected by the filter criteria 
-pages.cadastroProva.btnGerar						= Generate test
-pages.cadastroProva.gerarProva.title				= Generated test:
+pages.cadastroPergunta.title							= Register questions
+pages.cadastroPergunta.menu								= Register questions
+pages.cadastroPergunta.titleAlternativa					= Register alternative
+pages.cadastroPergunta.titleDissertativa				= Register dissertative
+pages.cadastroPergunta.titleMultiplaEscolha				= Register multiple choice
+pages.cadastroPergunta.titleVerdadeiroFalso				= Register true or false
+pages.cadastroPergunta.form.pergunta.enunciado			= Enunciation:
+pages.cadastroPergunta.form.pergunta.dificuldade		= Difficult:
+pages.cadastroPergunta.form.pergunta.tempoEstimado		= Estimated time:
+pages.cadastroPergunta.form.pergunta.dataCriacao 		= Creation date:
+pages.cadastroPergunta.form.pergunta.itens				= Itens:
+pages.cadastroPergunta.form.pergunta.resposta			= Answer:
+pages.cadastroPergunta.table.title						= Registered questions 
+pages.cadastroPergunta.table.codigo						= Code		
+pages.cadastroPergunta.table.enunciado					= Enunciation
+pages.cadastroPergunta.table.dificuldade				= Difficult
+pages.cadastroPergunta.table.tempoEstimado				= Estimated time
+pages.cadastroPergunta.table.dataCriacao				= Creation date
+pages.cadastroPergunta.table.numeroPerguntas			= Number of registered questions
+pages.cadastroPergunta.dissertativa.table.title			= Dissertatives
+pages.cadastroPergunta.dissertativa.table.codigo		= Code
+pages.cadastroPergunta.dissertativa.table.enunciado		= Enunciation
+pages.cadastroPergunta.dissertativa.table.resposta		= Answer
+pages.cadastroPergunta.dissertativa.table.dificuldade	= Difficult
+pages.cadastroPergunta.dissertativa.table.tempoEstimado	= Estimated Time
+pages.cadastroPergunta.dissertativa.table.dataCriacao	= Date of Creation
+pages.cadastroPergunta.dissertativa.filterMSG			= No Dissertatives selected by the filter criteria
+pages.cadastroPergunta.filterMSG						= No questions selected by the filter criteria
 
-pages.cadastroItem.title							= Register Items
-pages.cadastroItem.menu								= Register Items 
-pages.cadastroItem.form.nomeAlternativa				= Alternative:
-pages.cadastroItem.form.resposta					= Answer:
-pages.cadastroItem.form.resposta.booleanBtn.true	= Correct
-pages.cadastroItem.form.resposta.booleanBtn.false	= Incorrect
-pages.cadastroItem.table.title						= Registered items
-pages.cadastroItem.table.codigoItem					= Code
-pages.cadastroItem.table.nomeAlternativa			= Alternative
-pages.cadastroItem.table.resposta					= Answer
-pages.cadastroItem.filterMSG						= No item selected by the filter criteria
 
-pages.geradorProva.title							= Test Generator
-pages.geradorProva.menu								= Test Generator
-pages.geradorProva.form.prova						= Test to be generated:
-pages.geradorProva.form.sm.prova					= Select a test
-pages.geradorProva.form.btn.gerarProva				= Generate test	
+pages.cadastroProva.title								= Register test
+pages.cadastroProva.menu								= Register test
+pages.cadastroProva.form.nome							= Name:
+pages.cadastroProva.form.faculdade						= College:
+pages.cadastroProva.form.turma							= Class:
+pages.cadastroProva.form.curso							= Course:
+pages.cadastroProva.form.dificuldade					= Difficult:
+pages.cadastroProva.form.dificuldadeDaPergunta			= Difficult of the questions:
+pages.cadastroProva.form.dataAplicacao					= Application date:
+pages.cadastroProva.form.numeroPergunta 				= Number of questions:
+pages.cadastroProva.form.tempo							= Estimated time:
+pages.cadastroProva.form.disciplina						= Discipline:
+pages.cadastroProva.form.sm.disciplina					= Select a discipline
+pages.cadastroProva.form.conteudos						= Contents:
+pages.cadastroProva.table.title							= Registered tests
+pages.cadastroProva.table.codigo						= Code
+pages.cadastroProva.table.nome							= Name
+pages.cadastroProva.table.faculdade						= College
+pages.cadastroProva.table.turma							= Class
+pages.cadastroProva.table.curso							= Course
+pages.cadastroProva.table.dificuldade					= Difficult
+pages.cadastroProva.table.dataAplicacao					= Application date
+pages.cadastroProva.table.tempo							= Estimated time
+pages.cadastroProva.filterMSG							= No test selected by the filter criteria 
+pages.cadastroProva.pergunta.table.title				= Questions of Test: 
+pages.cadastroProva.pergunta.table.codigo				= Code
+pages.cadastroProva.pergunta.table.enunciado			= Enunciation
+pages.cadastroProva.pergunta.table.dificuldade			= Difficulty
+pages.cadastroProva.pergunta.table.tempoEstimado		= Estimated Time
+pages.cadastroProva.pergunta.table.dataCriacao			= Date of Creation
+pages.cadastroProva.pergunta.filterMSG					= No question selected by the filter criteria 
+pages.cadastroProva.prova.dissertativas					= Dissertatives of Test:
+pages.cadastroProva.dissertativa.table.codigo			= Code
+pages.cadastroProva.dissertativa.table.enunciado		= Enunciation
+pages.cadastroProva.dissertativa.table.resposta			= Answer
+pages.cadastroProva.dissertativa.table.dificuldade		= Difficulty
+pages.cadastroProva.dissertativa.table.tempoEstimado	= Estimated Time
+pages.cadastroProva.dissertativa.table.dataCriacao		= Date of Creation
+pages.cadastroProva.dissertativa.filterMSG				= No dissertative selected by the filter criteria 
+
+
+pages.cadastroItem.title								= Register Items
+pages.cadastroItem.menu									= Register Items 
+pages.cadastroItem.form.nomeAlternativa					= Alternative:
+pages.cadastroItem.form.resposta						= Answer:
+pages.cadastroItem.form.resposta.booleanBtn.true		= Correct
+pages.cadastroItem.form.resposta.booleanBtn.false		= Incorrect
+pages.cadastroItem.table.title							= Registered items
+pages.cadastroItem.table.codigoItem						= Code
+pages.cadastroItem.table.nomeAlternativa				= Alternative
+pages.cadastroItem.table.resposta						= Answer
+pages.cadastroItem.filterMSG							= No item selected by the filter criteria
+
+
+pages.geradorProva.title								= Test Generator
+pages.geradorProva.menu									= Test Generator
+pages.geradorProva.form.prova							= Test to be generated:
+pages.geradorProva.form.sm.prova						= Select a test
+pages.geradorProva.form.btn.gerarProva					= Generate test	
 
 
 
