--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -1,161 +1,185 @@
-pages.comuns.menu.inicio							= In\u00edcio
-pages.comuns.menu.cadastros							= Cadastros
-pages.comuns.menu.gerarProva						= Gerar Prova
-pages.comuns.menu.idioma							= Idioma
-pages.comuns.menu.sobre								= Sobre nós
+pages.comuns.menu.inicio								= In\u00edcio
+pages.comuns.menu.cadastros								= Cadastros
+pages.comuns.menu.gerarProva							= Gerar Prova
+pages.comuns.menu.idioma								= Idioma
+pages.comuns.menu.sobre									= Sobre nós
 
 
-pages.comuns.btn.professor							= Cadastro de Professores
-pages.comuns.btn.disciplina							= Cadastro de Disciplinas
-pages.comuns.btn.item								= Cadastro de Itens
-pages.comuns.btn.pergunta							= Cadastro de Perguntas
-pages.comuns.btn.conteudo							= Cadastro de Conteudos
-pages.comuns.btn.prova								= Cadastro de Provas
+pages.comuns.btn.professor								= Cadastro de Professores
+pages.comuns.btn.disciplina								= Cadastro de Disciplinas
+pages.comuns.btn.item									= Cadastro de Itens
+pages.comuns.btn.pergunta								= Cadastro de Perguntas
+pages.comuns.btn.conteudo								= Cadastro de Conteudos
+pages.comuns.btn.prova									= Cadastro de Provas
 
 
-pages.comuns.form.btnSalvar              			= Salvar
-pages.comuns.form.opcoes							= Opções
+pages.comuns.form.btnSalvar              				= Salvar
+pages.comuns.form.opcoes								= Opções
 
 
-pages.inicio.welcome								= Bem vindo ao TMaker! O melhor servi\u00e7o web para você professor fazer suas provas com conforto, precisão e rapidez.
-pages.inicio.title									= In\u00edcio
-pages.inicio.menu									= In\u00edcio
+pages.inicio.welcome									= Bem vindo ao TMaker! O melhor servi\u00e7o web para você professor fazer suas provas com conforto, precisão e rapidez.
+pages.inicio.title										= In\u00edcio
+pages.inicio.menu										= In\u00edcio
 
 
-pages.comuns.rodape.footerText 						= http://www.iznerol.com.br - Alfa 1.0
-pages.comuns.rodape.allRightsReserved 				= 2016 - Todos os direitos reservados
+pages.comuns.rodape.footerText 							= http://www.iznerol.com.br - Alfa 1.0
+pages.comuns.rodape.allRightsReserved 					= 2016 - Todos os direitos reservados
 
 
-pages.templateMenu.titleMainMenu 		     		= Menu Principal
+pages.templateMenu.titleMainMenu 		     			= Menu Principal
 
 
-pages.linguagem.title                      			= Idioma
-pages.linguagem.lingua								= Trocar de Idioma:
-pages.linguagem.menu								= Idioma
-pages.linguagem.idiomaDisp							= Idiomas disponíveis
-
-pages.sobre.title									= Sobre nós
-pages.sobre.info									= noix somus uma empresa foda de tecnologia da informaçaum
+pages.linguagem.title                      				= Idioma
+pages.linguagem.lingua									= Trocar de Idioma:
+pages.linguagem.menu									= Idioma
+pages.linguagem.idiomaDisp								= Idiomas disponíveis
 
 
-pages.cadastroProfessor.title                  		= Cadastro de Professores
-pages.cadastroProfessor.menu						= Cadastro de Professores
-pages.cadastroProfessor.form.nome					= Nome:
-pages.cadastroProfessor.form.cursoMinistra			= Curso ministrado:
-pages.cadastroProfessor.table.title  				= Professores Cadastrados
-pages.cadastroProfessor.table.codigo				= Código
-pages.cadastroProfessor.table.nome					= Nome
-pages.cadastroProfessor.table.cursoMinistra			= Curso ministrado
-pages.cadastroProfessor.professor.Disciplinas   	= Disciplinas do Professor:
-pages.cadastroProfessor.disciplina.codigo			= Código
-pages.cadastroProfessor.disciplina.nome				= Nome
-pages.cadastroProfessor.filterMSG					= Nenhum professor selecionado pelo criterio do filtro
-pages.cadastroProfessor.disciplina.filterMSG		= Nenhuma Disciplina selecionada pelo criterio do filtro
+pages.sobre.title										= Sobre nós
+pages.sobre.info										= Este web site foi proposto como projeto de Linguagem Orientada a Objetos Laboratorio pelo professor Glauco Todesco na FACENS e foi desenvolvido pelos engenheiros da computação Giovanni Garcia de RA: 140872 e Maurício Luís de RA: 141269 
 
 
-pages.cadastroDisciplina.title						= Cadastro de Disciplinas
-pages.cadastroDisciplina.menu						= Cadastro de Disciplinas
-pages.cadastroDisciplina.form.nome					= Nome:
-pages.cadastroDisciplina.form.professor				= Professor:
-pages.cadastroDisciplina.form.sm.professor			= Selecione um Professor
-pages.cadastroDisciplina.table.title				= Disciplinas Cadastradas
-pages.cadastroDisciplina.table.codigo				= Código
-pages.cadastroDisciplina.table.nome					= Nome
-pages.cadastroDisciplina.filterMSG					= Nenhuma disciplina selecionada pelo criterio do filtro
-pages.cadastroDisciplina.disciplina.conteudos		= Conteúdos da Disciplina:
-pages.cadastroDisciplina.conteudo.codigo			= Código
-pages.cadastroDisciplina.conteudo.nome				= Nome
-pages.cadastroDisciplina.conteudo.filterMSG			= Nenhum conteudo selecionado pelo criterio do filtro
-pages.cadastroDisciplina.disciplina.provas			= Provas da Disciplina:
-pages.cadastroDisciplina.prova.codigo				= Código
-pages.cadastroDisciplina.prova.nome					= Nome
-pages.cadastroDisciplina.prova.faculdade			= Faculdade
-pages.cadastroDisciplina.prova.turma				= Turma
-pages.cadastroDisciplina.prova.curso				= Curso
-pages.cadastroDisciplina.prova.dataAplicacao		= Data de Aplicação
-pages.cadastroDisciplina.prova.tempo				= Tempo Estimado
-pages.cadastroDisciplina.prova.filterMSG			= Nenhuma prova selecionada pelo criterio do filtro
+pages.cadastroProfessor.title                  			= Cadastro de Professores
+pages.cadastroProfessor.menu							= Cadastro de Professores
+pages.cadastroProfessor.form.nome						= Nome:
+pages.cadastroProfessor.form.cursoMinistra				= Curso ministrado:
+pages.cadastroProfessor.table.title  					= Professores Cadastrados
+pages.cadastroProfessor.table.codigo					= Código
+pages.cadastroProfessor.table.nome						= Nome
+pages.cadastroProfessor.table.cursoMinistra				= Curso ministrado
+pages.cadastroProfessor.professor.Disciplinas   		= Disciplinas do Professor:
+pages.cadastroProfessor.disciplina.codigo				= Código
+pages.cadastroProfessor.disciplina.nome					= Nome
+pages.cadastroProfessor.filterMSG						= Nenhum professor selecionado pelo criterio do filtro
+pages.cadastroProfessor.disciplina.filterMSG			= Nenhuma Disciplina selecionada pelo criterio do filtro
 
 
-pages.cadastroConteudo.title						= Cadastro de Conteúdos
-pages.cadastroConteudo.menu							= Cadastro de Conteúdos
-pages.cadastroConteudo.form.nomeCont				= Nome:
-pages.cadastroConteudo.form.disciplina				= Disciplina:
-pages.cadastroConteudo.form.sm.disciplina			= Selecione uma Disciplina
-pages.cadastroConteudo.form.perguntas				= Perguntas:
-pages.cadastroConteudo.table.title					= Conteúdos Cadastrados
-pages.cadastroConteudo.table.codigo					= Código
-pages.cadastroConteudo.table.nome					= Nome
-pages.cadastroConteudo.filterMSG					= Nenhum conteudo selecionado pelo criterio do filtro
+pages.cadastroDisciplina.title							= Cadastro de Disciplinas
+pages.cadastroDisciplina.menu							= Cadastro de Disciplinas
+pages.cadastroDisciplina.form.nome						= Nome:
+pages.cadastroDisciplina.form.professor					= Professor:
+pages.cadastroDisciplina.form.sm.professor				= Selecione um Professor
+pages.cadastroDisciplina.table.title					= Disciplinas Cadastradas
+pages.cadastroDisciplina.table.codigo					= Código
+pages.cadastroDisciplina.table.nome						= Nome
+pages.cadastroDisciplina.filterMSG						= Nenhuma disciplina selecionada pelo criterio do filtro
+pages.cadastroDisciplina.disciplina.conteudos			= Conteúdos da Disciplina:
+pages.cadastroDisciplina.conteudo.codigo				= Código
+pages.cadastroDisciplina.conteudo.nome					= Nome
+pages.cadastroDisciplina.conteudo.filterMSG				= Nenhum conteudo selecionado pelo criterio do filtro
+pages.cadastroDisciplina.disciplina.provas				= Provas da Disciplina:
+pages.cadastroDisciplina.prova.codigo					= Código
+pages.cadastroDisciplina.prova.nome						= Nome
+pages.cadastroDisciplina.prova.faculdade				= Faculdade
+pages.cadastroDisciplina.prova.turma					= Turma
+pages.cadastroDisciplina.prova.curso					= Curso
+pages.cadastroDisciplina.prova.dataAplicacao			= Data de Aplicação
+pages.cadastroDisciplina.prova.tempo					= Tempo Estimado
+pages.cadastroDisciplina.prova.filterMSG				= Nenhuma prova selecionada pelo criterio do filtro
 
 
-pages.cadastroPergunta.title						= Cadastro de Perguntas
-pages.cadastroPergunta.menu							= Cadastro de Perguntas
-pages.cadastroPergunta.titleAlternativa				= Cadastro de Alternativa
-pages.cadastroPergunta.titleDissertativa			= Cadastro de Dissertativa
-pages.cadastroPergunta.titleMultiplaEscolha			= Cadastro de Multipla Escolha
-pages.cadastroPergunta.titleVerdadeiroFalso			= Cadastro de Verdadeiro ou Falso
-pages.cadastroPergunta.form.pergunta.enunciado		= Enunciado:
-pages.cadastroPergunta.form.pergunta.dificuldade	= Dificuldade:
-pages.cadastroPergunta.form.pergunta.tempoEstimado	= Tempo Estimado:
-pages.cadastroPergunta.form.pergunta.dataCriacao 	= Data de Criação:
-pages.cadastroPergunta.form.pergunta.itens			= Itens:
-pages.cadastroPergunta.form.pergunta.resposta		= Resposta:
-pages.cadastroPergunta.table.title					= Perguntas Cadastradas 
-pages.cadastroPergunta.table.codigo					= Código		
-pages.cadastroPergunta.table.enunciado				= Enunciado
-pages.cadastroPergunta.table.resposta				= Resposta
-pages.cadastroPergunta.table.dificuldade			= Dificuldade
-pages.cadastroPergunta.table.tempoEstimado			= Tempo Estimado
-pages.cadastroPergunta.table.dataCriacao			= Data de Criação
-pages.cadastroPergunta.table.numeroPerguntas		= Número de Perguntas Cadastradas
-pages.cadastroPergunta.filterMSG					= Nenhuma pergunta selecionada pelo criterio do filtro
+pages.cadastroConteudo.title							= Cadastro de Conteúdos
+pages.cadastroConteudo.menu								= Cadastro de Conteúdos
+pages.cadastroConteudo.form.nomeCont					= Nome:
+pages.cadastroConteudo.form.disciplina					= Disciplina:
+pages.cadastroConteudo.form.sm.disciplina				= Selecione uma Disciplina
+pages.cadastroConteudo.form.perguntas					= Perguntas:
+pages.cadastroConteudo.table.title						= Conteúdos Cadastrados
+pages.cadastroConteudo.table.codigo						= Código
+pages.cadastroConteudo.table.nome						= Nome
+pages.cadastroConteudo.filterMSG						= Nenhum conteudo selecionado pelo criterio do filtro
 
 
-pages.cadastroProva.title							= Cadastro de Provas
-pages.cadastroProva.menu							= Cadastro de Provas
-pages.cadastroProva.form.nome						= Nome:
-pages.cadastroProva.form.faculdade					= Faculdade:
-pages.cadastroProva.form.turma						= Turma:
-pages.cadastroProva.form.curso						= Curso:
-pages.cadastroProva.form.dificuldade				= Dificuldade:
-pages.cadastroProva.form.dificuldadeDaPergunta		= Dificuldade das Perguntas:
-pages.cadastroProva.form.dataAplicacao				= Data de Aplicação:
-pages.cadastroProva.form.numeroPergunta 			= Número de perguntas:
-pages.cadastroProva.form.tempo						= Tempo Estimado:
-pages.cadastroProva.form.disciplina					= Disciplina:
-pages.cadastroProva.form.sm.disciplina				= Selecione uma Disciplina
-pages.cadastroProva.form.conteudos					= Conteudos:
-pages.cadastroProva.table.title						= Provas Cadastradas
-pages.cadastroProva.table.codigo					= Código
-pages.cadastroProva.table.nome						= Nome
-pages.cadastroProva.table.faculdade					= Faculdade
-pages.cadastroProva.table.turma						= Turma
-pages.cadastroProva.table.curso						= Curso
-pages.cadastroProva.table.dificuldade				= Dificuldade
-pages.cadastroProva.table.dataAplicacao				= Data de Aplicação
-pages.cadastroProva.table.tempo						= Tempo Estimado
-pages.cadastroProva.filterMSG						= Nenhuma Prova selecionada pelo criterio do filtro
+pages.cadastroPergunta.title							= Cadastro de Perguntas
+pages.cadastroPergunta.menu								= Cadastro de Perguntas
+pages.cadastroPergunta.titleAlternativa					= Cadastro de Alternativa
+pages.cadastroPergunta.titleDissertativa				= Cadastro de Dissertativa
+pages.cadastroPergunta.titleMultiplaEscolha				= Cadastro de Multipla Escolha
+pages.cadastroPergunta.titleVerdadeiroFalso				= Cadastro de Verdadeiro ou Falso
+pages.cadastroPergunta.form.pergunta.enunciado			= Enunciado:
+pages.cadastroPergunta.form.pergunta.dificuldade		= Dificuldade:
+pages.cadastroPergunta.form.pergunta.tempoEstimado		= Tempo Estimado:
+pages.cadastroPergunta.form.pergunta.dataCriacao 		= Data de Criação:
+pages.cadastroPergunta.form.pergunta.itens				= Itens:
+pages.cadastroPergunta.form.pergunta.resposta			= Resposta:
+pages.cadastroPergunta.table.title						= Perguntas Cadastradas 
+pages.cadastroPergunta.table.codigo						= Código		
+pages.cadastroPergunta.table.enunciado					= Enunciado
+pages.cadastroPergunta.table.resposta					= Resposta
+pages.cadastroPergunta.table.dificuldade				= Dificuldade
+pages.cadastroPergunta.table.tempoEstimado				= Tempo Estimado
+pages.cadastroPergunta.table.dataCriacao				= Data de Criação
+pages.cadastroPergunta.table.numeroPerguntas			= Número de Perguntas Cadastradas
+pages.cadastroPergunta.dissertativa.table.title			= Dissertativas Cadastradas
+pages.cadastroPergunta.dissertativa.table.codigo		= Código
+pages.cadastroPergunta.dissertativa.table.enunciado		= Enunciado
+pages.cadastroPergunta.dissertativa.table.resposta		= Resposta
+pages.cadastroPergunta.dissertativa.table.dificuldade	= Dificuldade
+pages.cadastroPergunta.dissertativa.table.tempoEstimado	= Tempo Estimado
+pages.cadastroPergunta.dissertativa.table.dataCriacao	= Data da Criação
+pages.cadastroPergunta.dissertativa.filterMSG			= Nenhuma dissertativa selecionada pelo criterio do filtro
+pages.cadastroPergunta.filterMSG						= Nenhuma pergunta selecionada pelo criterio do filtro
 
 
-pages.cadastroItem.title							= Cadastro de Itens
-pages.cadastroItem.menu								= Cadastro de Itens 
-pages.cadastroItem.form.nomeAlternativa				= Alternativa:
-pages.cadastroItem.form.resposta					= Resposta:
-pages.cadastroItem.form.resposta.booleanBtn.true	= Correta
-pages.cadastroItem.form.resposta.booleanBtn.false	= Incorreta
-pages.cadastroItem.table.title						= Itens Cadastrados
-pages.cadastroItem.table.codigoItem					= Código
-pages.cadastroItem.table.nomeAlternativa			= Alternativa
-pages.cadastroItem.table.resposta					= Resposta
-pages.cadastroItem.filterMSG						= Nenhum Item selecionado pelo criterio do filtro
+pages.cadastroProva.title								= Cadastro de Provas
+pages.cadastroProva.menu								= Cadastro de Provas
+pages.cadastroProva.form.nome							= Nome:
+pages.cadastroProva.form.faculdade						= Faculdade:
+pages.cadastroProva.form.turma							= Turma:
+pages.cadastroProva.form.curso							= Curso:
+pages.cadastroProva.form.dificuldade					= Dificuldade:
+pages.cadastroProva.form.dificuldadeDaPergunta			= Dificuldade das Perguntas:
+pages.cadastroProva.form.dataAplicacao					= Data de Aplicação:
+pages.cadastroProva.form.numeroPergunta 				= Número de perguntas:
+pages.cadastroProva.form.tempo							= Tempo Estimado:
+pages.cadastroProva.form.disciplina						= Disciplina:
+pages.cadastroProva.form.sm.disciplina					= Selecione uma Disciplina
+pages.cadastroProva.form.conteudos						= Conteudos:
+pages.cadastroProva.table.title							= Provas Cadastradas
+pages.cadastroProva.table.codigo						= Código
+pages.cadastroProva.table.nome							= Nome
+pages.cadastroProva.table.faculdade						= Faculdade
+pages.cadastroProva.table.turma							= Turma
+pages.cadastroProva.table.curso							= Curso
+pages.cadastroProva.table.dificuldade					= Dificuldade
+pages.cadastroProva.table.dataAplicacao					= Data de Aplicação
+pages.cadastroProva.table.tempo							= Tempo Estimado
+pages.cadastroProva.filterMSG							= Nenhuma Prova selecionada pelo criterio do filtro
+pages.cadastroProva.pergunta.table.title				= Perguntas da Prova:
+pages.cadastroProva.pergunta.table.codigo				= Código
+pages.cadastroProva.pergunta.table.enunciado			= Enunciado
+pages.cadastroProva.pergunta.table.dificuldade			= Dificuldade
+pages.cadastroProva.pergunta.table.tempoEstimado		= Tempo Estimado
+pages.cadastroProva.pergunta.table.dataCriacao			= Data de Criação
+pages.cadastroProva.pergunta.filterMSG					= Nenhuma pergunta selecionada pelo criterio do filtro
+pages.cadastroProva.prova.dissertativas					= Dissertativas da Prova:
+pages.cadastroProva.dissertativa.table.codigo			= Código
+pages.cadastroProva.dissertativa.table.enunciado		= Enunciado
+pages.cadastroProva.dissertativa.table.resposta			= Resposta
+pages.cadastroProva.dissertativa.table.dificuldade		= Dificuldade
+pages.cadastroProva.dissertativa.table.tempoEstimado	= Tempo Estimado
+pages.cadastroProva.dissertativa.table.dataCriacao		= Data de Criação
+pages.cadastroProva.dissertativa.filterMSG				= Nenhuma dissertativa selecionada pelo criterio do filtro
 
 
-pages.geradorProva.title							= Gerador de Prova
-pages.geradorProva.menu								= Gerador de Prova
-pages.geradorProva.form.prova						= Prova a ser gerada:
-pages.geradorProva.form.sm.prova					= Selecione uma prova
-pages.geradorProva.form.btn.gerarProva				= Gerar prova	
+pages.cadastroItem.title								= Cadastro de Itens
+pages.cadastroItem.menu									= Cadastro de Itens 
+pages.cadastroItem.form.nomeAlternativa					= Alternativa:
+pages.cadastroItem.form.resposta						= Resposta:
+pages.cadastroItem.form.resposta.booleanBtn.true		= Correta
+pages.cadastroItem.form.resposta.booleanBtn.false		= Incorreta
+pages.cadastroItem.table.title							= Itens Cadastrados
+pages.cadastroItem.table.codigoItem						= Código
+pages.cadastroItem.table.nomeAlternativa				= Alternativa
+pages.cadastroItem.table.resposta						= Resposta
+pages.cadastroItem.filterMSG							= Nenhum Item selecionado pelo criterio do filtro
+
+
+pages.geradorProva.title								= Gerador de Prova
+pages.geradorProva.menu									= Gerador de Prova
+pages.geradorProva.form.prova							= Prova a ser gerada:
+pages.geradorProva.form.sm.prova						= Selecione uma prova
+pages.geradorProva.form.btn.gerarProva					= Gerar prova	
 
 
 
