Alterado o filter dos selectOneMenu de startsWith para contains

--- a/src/main/resources/application_pt.properties
+++ b/src/main/resources/application_pt.properties
@@ -36,7 +36,7 @@ pages.linguagem.idiomaDisp								= Idiomas disponíveis
 
 
 pages.sobre.title										= Sobre nós
-pages.sobre.info										= Este web site foi proposto como projeto de Linguagem Orientada a Objetos Laboratorio pelo professor Glauco Todesco na FACENS e foi desenvolvido pelos engenheiros da computação Giovanni Garcia de RA: 140872 e Maurício Luís de RA: 141269 
+pages.sobre.info										= Este web site, foi proposto como projeto de Linguagem Orientada a Objetos Laboratorio pelo professor Glauco Todesco na FACENS. E foi desenvolvido pelos engenheiros da computação Giovanni Garcia de RA: 140872 e Maurício Luís de RA: 141269 
 
 
 pages.cadastroProfessor.title                  			= Cadastro de Professores
